Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -91,13 +91,28 @@ O suporte ao lojista integrado a API Cielo eCommerce se dá pelos seguintes cana
 
 Via a área do lojista, no site https://minhaconta.cielo.com.br/wps/portal/est2/login
 
+## 11. Qual o custo da API Cielo Ecommece?
+
+Cada Feature da API Cielo ecommerce possui custos diferentes:
+
+| feature                   | Tipo de custo | Descrição                                                                                                                                 |
+|---------------------------|---------------|-------------------------------------------------------------------------------------------------------------------------------------------|
+| **Transações de crédito** | Taxa          | Um valor % será cobrado sobre cada transação capturada. O Valor da taxa varia de acordo com o ramo de atividade descrito no CNPJ          |
+| **Transações de Débito**  | Taxa          | Um valor % será cobrado sobre cada transação capturada. O Valor da taxa varia de acordo com o ramo de atividade descrito no CNPJ          |
+| **Transações de Boleto**  | Emissão       | Um valor tabelado será cobrado por Boleto emitido. Verifique com o Comercial Cielo em qual categoria de custo sua loja está inserida      |
+| **Analise de fraude**     | Emissão       | Um valor tabelado será cobrado por transação analisada. Verifique com o Comercial Cielo em qual categoria de custo sua loja está inserida |
+| **Tokenização**           | Não é cobrado | Não há custo                                                                                                                              |
+| **Recorrência**           | Não é cobrado | Apenas a taxa sobre transações de crédito é cobrada                                                                                       |
+| **Consulta Bin**          | Não é cobrado | Não há custo                                                                                                                              |
+| **Wallets**               | Não é cobrado | Apenas a taxa sobre transações de crédito é cobrada                                                                                       |
+
 # Dúvidas de Técnicas / Integração
 
-## 11. Como funciona a solução API Cielo eCommerce da Cielo?
+## 1. Como funciona a solução API Cielo eCommerce da Cielo?
 
 A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST. O modelo empregado é bastante simples: Existem duas URLs (endpoint), uma específica operações que causam efeitos colaterais - como autorização, captura e cancelamento de transações, e uma URL específica para operações que não causam efeitos colaterais, como pesquisa de transações.
 
-## 12. Há mudanças nas credenciais da 1.5 para a API Cielo eCommerce?
+## 2. Há mudanças nas credenciais da 1.5 para a API Cielo eCommerce?
 
 Sim, as credenciais utilizadas em cada plataforma são diferentes:
 
@@ -118,22 +133,22 @@ Sim, as credenciais utilizadas em cada plataforma são diferentes:
 
 > Caso não saiba suas credenciais, entre em contato com o Suporte Cielo e informer o seu CNPJ/CPF. As credenciais serão enviadas ao e-mail cadastrado.
 
-## 13. Como consigo as credenciais de cada ambiente?
+## 3. Como consigo as credenciais de cada ambiente?
 
 Existem dois ambientes na API Cielo eCommerce, Sandbox e Produção.
 
 * **Sandbox**: basta acessar https://cadastrosandbox.cieloecommerce.cielo.com.br/ e realizar um cadastro, suas credenciais serão exibidas após o cadastro
 * **Produção**: é necessário entrar em contato com a central de credenciamento Cielo e solicitar suas credenciais. Elas serão enviadas via e-mail. Sobre a central de credenciamento acesse https://developercielo.github.io/Guia-de-migracao-1.5x3.0/#suporte-cielo
 
-## 14. É preciso algum software proprietário, como DLLs, para fazer a integração?
+## 4. É preciso algum software proprietário, como DLLs, para fazer a integração?
 
 Não. A ausência de aplicativos proprietários é uma das características da solução: Não é necessário instalar aplicativos no ambiente da loja em nenhuma hipótese.
 
-## 15. Preciso fazer uma afiliação antes de testar a integração?
+## 5. Preciso fazer uma afiliação antes de testar a integração?
 
 Não é necessária uma afiliação para utilizar o Sanbox Cielo. Basta acessar o [Cadastro do Sandbox](https://bit.ly/2cHdrzr) e criar uma conta de testes. Ao fim do cadastro você receberá um `MerchantId` e um `MerchantKey`, que deverão ser utilizados para autenticar todas as requisições feitas para os endpoints da API.
 
-## 16. Que tipo de conteúdo é enviado na integração?
+## 6. Que tipo de conteúdo é enviado na integração?
 
 Para simplificar ao máximo a solução API Cielo eCommerce, a integração é feita através do envio de JSONs numa arquitetura REST. Cada tipo de mensagem deve ser enviada para um recurso identificado através do path e enviada segundo o método HTTP adequado:
 
@@ -141,7 +156,7 @@ Para simplificar ao máximo a solução API Cielo eCommerce, a integração é f
 * **PUT** - O método HTTP PUT é utilizado para atualização de um recurso já existente. Por exemplo, captura ou cancelamento de uma transação previamente autorizada.
 * **GET** - O método HTTP GET é utilizado para consultas de recursos já existentes. Por exemplo, consulta de transações
 
-## 17. Como testar transações com meios de pagamento simulado?
+## 7. Como testar transações com meios de pagamento simulado?
 
 Para realizar testes na API Cielo eCommerce, não é necessário utilizar cartões / meios de pagamentos reais.
 Cada meio de pagamento (Crédito, Débito, boleto e Transferência online) possui uma contra parte simulada.
@@ -151,7 +166,7 @@ Cada meio de pagamento (Crédito, Débito, boleto e Transferência online) possu
 * **C. Debito** - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
 * **Transferência online** - Você será redirecionado a uma tela onde poderá selecionar o resultado da operação
 
-## 18. Existe alguma regra para leitura de cartões?
+## 8. Existe alguma regra para leitura de cartões?
 
 A leitura dos dados do cartão no ambiente próprio é controlada por regras definidas pelo programa de segurança imposto pelas bandeiras de cartões.
 
@@ -160,26 +175,26 @@ A leitura dos dados do cartão no ambiente próprio é controlada por regras def
 
 Ademais, atendidos os requisitos, no momento do credenciamento E-commerce deve ser mencionada a escolha por leitura do cartão na própria loja.
 
-## 19. É necessário usar algum certificado em para realizar a conexão com a API Cielo eCommerce
+## 9. É necessário usar algum certificado em para realizar a conexão com a API Cielo eCommerce
 
 Sim, é necessário realizar a instalação do certificado SSL EV. Mais informações no [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 
-## 20. É necessário algum protocolo de segurança para a utilização da API Cielo eCommerce
+## 10. É necessário algum protocolo de segurança para a utilização da API Cielo eCommerce
 
 **É obrigatório o uso de TLS 1.2 na comunicação a API.**
 
 SSL,TLS 1.0 e 1.1 não são suportados. Integrações utilizando esses protocolos não poderão realizar transações.
 
-## 21. Existe alguma restrição de Ips para consumir a API
+## 11. Existe alguma restrição de Ips para consumir a API
 
 Não há restrições de IP ou necessidade de uso de PROXYs para se integrar a API Cielo eCommerce
 
-## 22. Como consultar transações de Sandbox??
+## 12. Como consultar transações de Sandbox??
 
 O ambiente de Sandbox não possui uma área de relatórios, sendo necessario realizar uma consulta via API para visualizar transações nesse ambiente.
 Veja como realizar essa consulta em nosso manual de integração: https://developercielo.github.io/Webservice-3.0/#consultando-vendas
 
-## 23. A API Cielo eCommerce possui SDKs em quais linguagens?
+## 13. A API Cielo eCommerce possui SDKs em quais linguagens?
 
 Sim, a API possui SDKs para:
 
@@ -192,44 +207,44 @@ Sim, a API possui SDKs para:
 
 Mais informações do [repositório Cielo](https://github.com/DeveloperCielo)  
 
-## 24. A API Cielo eCommerce aceita pagamento com diferentes moedas e cartões internacionais?
+## 14. A API Cielo eCommerce aceita pagamento com diferentes moedas e cartões internacionais?
 
 * **Moedas**:No momento a API Cielo eCommerce aceita somente transações em Reais (R$/BRL).
 * **Cartões internacionais**: Sim, a API aceita cartãoes internacionais, mas as transações são processadas em Reais (R$/BRL) e transações parceladas são negadas pelo emissor do cartão.
 
 **OBS**: Cartões internacionais não podem realizar parcelamento.
 
-## 25. Poderei consultar informações sobre o meu contrato junto a Cielo (Taxa, prazo de deposito dos valores)?
+## 15. Poderei consultar informações sobre o meu contrato junto a Cielo (Taxa, prazo de deposito dos valores)?
 
 Não, dados sobre tarifas e valores de cobrança não estão passiveis de consulta via API Cielo eCommerce
 Esses dados poderão ser consultados via a área do lojista no site Cielo ou via o suporte-cielo.
 
-## 26. Poderei realizar antecipação de pagamentos pela API Cielo eCommerce?
+## 16. Poderei realizar antecipação de pagamentos pela API Cielo eCommerce?
 
 Não, a API Cielo eCommerce se destina apenas ao processo de autorização de transações e atualização de dados de pedidos online.
 Dúvidas ou questões a respeito de agenda financeira e antecipação de recebíveis devem ser direcionadas ao Suporte-Cielo
 
-## 27. Como minha integração será notificada a respeito das mudanças de status?
+## 17. Como minha integração será notificada a respeito das mudanças de status?
 
 Mudanças de status serão notificadas via um POST HTTP direcionado a URL de notificação que deve ser cadastrada pelo suporte Cielo.
 
-## 28. Como posso consultar dados a respeito das minhas vendas?
+## 18. Como posso consultar dados a respeito das minhas vendas?
 
 Será possível consultar via API ou via o portal Cielo:
 
 * **API:** Toda transação enviada via POST gera uma URL onde pode ser realizado um GET, onde serão retornados os dados do pedido. Mais informações no [manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 * **Portal Cielo:** é possível extrair relatórios e pesquisar pedidos a partir do site Cielo. Mais informações no site [Cielo](www.cielo.com.br)
 
-## 29. O que é uma transação?
+## 19. O que é uma transação?
 
 O elemento central do Cielo E-commerce é a transação, criada a partir de uma requisição HTTP ao Webservice da Cielo. A identificação única de uma transação na Cielo é feita através do campo TID, que está presente no retorno das mensagens de autorização. Esse campo é essencial para realizar consultas, capturas e cancelamentos.
 
-## 30. Qual o prazo para uma autorização expirar?
+## 20. Qual o prazo para uma autorização expirar?
 
 O prazo para captura de uma transação é definido em seu cadastro Cielo e depende do ramo de atividade de sua empresa.
 Caso uma transação não seja capturada dentro desse limite, ela deixa de ser válida, não podendo mais ser capturada. O status da venda continuará como autorizado, mas não será possível altera-lo.
 
-## 31. É possível fazer uma captura em um momento após a autorização?
+## 21. É possível fazer uma captura em um momento após a autorização?
 
 Uma transação autorizada somente gera o crédito para o estabelecimento comercial caso ela seja capturada. Por isso, toda venda que o lojista queira efetivar será preciso realizar a captura (ou confirmação) da transação.
 
@@ -242,13 +257,13 @@ Para vendas na modalidade de Crédito, essa confirmação pode ocorrer em dois m
 
 Para mais informações sobre Captura de transações, acesso o [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 
-## 32. É possível cancelar uma transação?
+## 22. É possível cancelar uma transação?
 
 O cancelamento é utilizado quando o lojista decide não efetivar um pedido de compra, seja por insuficiência de estoque, por desistência da compra pelo consumidor, ou qualquer outro motivo. Seu uso faz-se necessário principalmente se a transação estiver capturada, pois haverá débito na fatura do portador, caso ela não seja cancelada.
 
 Se a transação estiver apenas autorizada e a loja queira cancelá-la, o pedido de cancelamento não é necessário, pois após o prazo de captura expirar, o valor não será cobrado do comprador e a transação será invalidada.
 
-## 33. Qual diferença entra a notificação para cada tipo de pagamento?
+## 23. Qual diferença entra a notificação para cada tipo de pagamento?
 
 Todas as alterações no status de seus pedidos serão notificadas via a URL de notificação, que deve ser cadastrada junto a Cielo.
 Os meios de pagamento possuem os mesmos Status, apenas sua ordem é alterada.
@@ -256,21 +271,25 @@ Os status e diferenças dos meios de pagamento estão explicadas
 
 > **Sobre Boletos**: Apenas o boleto registrado Bradesco possui atualização de Status.
 
-## 34. Onde posso validar os códigos de erro da API
+## 24. Onde posso validar os códigos de erro da API
 
 Os códigos de erros da API e do POSTMAN são descritos dentro do [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 
-## 35. Onde encontro exemplos e coleções do Postman
+## 25. Onde encontro exemplos e coleções do Postman
 
 Todos so exemplos e requisições da API estão disponiveis nos manuais abaixo:
 
 * [Manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
 * [Tutorial Postman](https://developercielo.github.io/manual/cielo-ecommerce#ferramenta-para-integra%C3%A7%C3%A3o-postman)
 
-## 36. Qual o limite de parcelamento Cielo
+## 26. Qual o limite de parcelamento Cielo
 
 O limite de parcelamento da loja depende do cadastro realizado na Afiliação Cielo
 Entre em contato com o Suporte Cielo para maiores informações sobre o seu limite de parcelamento.
+
+## 27. A Api possui atualização automatica de BINs?
+
+Sim, a Cielo é integrada as principais bandeiras do mercado e é atualizada diariamente com os novos Bins emitidos ao redor do mundo.
 
 # Dúvidas sobre Recursos e Features
 
@@ -363,6 +382,10 @@ Sim, na recorrência inteligente, é possível atualizar dados de uma recorrênc
 **C**.Se o novo dia informado for antes do atual dia de agendamento, mas a próxima recorrência for em outro mês, a atualização do dia da recorrência terá efeito na próxima recorrência.
 * Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/09. Quando eu atualizar para o dia 3, a data da próxima recorrência será 03/09
 
+## 8. Posso criar recorrência com todos os meios de pagamento?
+
+Não, a recorrência Cielo está disponivel apenas para Cartão de crédito
+
 # Tokenização/Cartão protegido
 
 ## 1.O que é a tokenização/cartão protegido da API Cielo eCommerce
@@ -383,6 +406,10 @@ Não, para armazenar os tokens não é necessário ser certificado PCI
 ## 4.É necessário enviar o CVV para realizar uma transação somente com o token?
 
 Não é obrigatório, mas a Afiliação Cielo (EC) deve ter permissão para transacionar sem CVV, caso contrario a transação será negada
+
+## 5.É possivel tokenizar cartões de Débito?
+
+Sim, é possivel tokenizar cartões de débito. 
 
 # Autenticação
 
