Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -233,7 +233,7 @@ Mudanças de status serão notificadas via um POST HTTP direcionado a URL de not
 Será possível consultar via API ou via o portal Cielo:
 
 * **API:** Toda transação enviada via POST gera uma URL onde pode ser realizado um GET, onde serão retornados os dados do pedido. Mais informações no [manual de integração](https://developercielo.github.io/manual/cielo-ecommerce)
-* **Portal Cielo:** é possível extrair relatórios e pesquisar pedidos a partir do site Cielo. Mais informações no site [Cielo](www.cielo.com.br)
+* **Portal Cielo:** é possível extrair relatórios e pesquisar pedidos a partir do site Cielo. Mais informações no site www.cielo.com.br
 
 ## 19. O que é uma transação?
 
