Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -44,8 +44,7 @@ A API Cielo eCommerce Cielo aceita os seguintes meios de pagamento:
 Não é possível manter duas integrações simultâneas do webservice 1.5 e da API Cielo eCommerce
 Ao realizar o cadastro de uma das integrações junto ao Cielo Ecommerce será necessário escolher entre uma das plataformas
 Para maiores informações acesse: https://www.cielo.com.br/desenvolvedores
-
-> A migração para a API Cielo Ecommerce é **obrigatoria**. O WebService 1.5 foi descontinuado e não possui suporte ou novos desenvolvimentos.
+A migração para a API Cielo Ecommerce é **obrigatoria**. O WebService 1.5 foi descontinuado e não possui suporte ou novos desenvolvimentos.
 
 ## 5. Não possuo a integração 1.5, posso utilizar a API Cielo eCommerce?
 
