--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1898,6 +1898,15 @@ PrinterListerner printerListener = new PrinterListener() {
 });
 ```
 
+>**Atenção:** para alterações na view do aplicativo é necessário rodar o código dentro do callback dentro de um bloco runOnUiThread.
+
+
+```java
+    @Override public void onPrintSuccess(int printedLines) { 
+            showDialog();
+    }
+```
+
 ### Mapa de Estilos de Impressão
 
 Você pode formatar a sua impressão criando mapas de estilos utilizando os parâmetros disponíveis:
