Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1902,7 +1902,12 @@ PrinterListerner printerListener = new PrinterListener() {
 
 ```java
     @Override public void onPrintSuccess(int printedLines) { 
-            showDialog();
+        runOnUiThread(new Runnable() {
+            @Override
+            public void run() {
+                showDialog();
+            }
+        });
     }
 ```
 
