Updated '_i18n/en/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/en/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/en/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1900,6 +1900,19 @@ PrinterListerner printerListener = new PrinterListener() {
 });
 ```
 
+>**Attention:** to change applcation view you should run your callback code inside a runOnUiThread block.
+
+```java
+    @Override public void onPrintSuccess(int printedLines) { 
+        runOnUiThread(new Runnable() {
+            @Override
+            public void run() {
+                showDialog();
+            }
+        });
+    }
+```
+
 ### Print Styles Map
 
 You can format your printing creating maps of styles using the parameters available:
