Inclusão documentação 3DS em inglês.

--- a/_i18n/pt/_posts/env3ds/2018-09-10-env3ds.md
+++ b/_i18n/pt/_posts/env3ds/2018-09-10-env3ds.md
@@ -170,7 +170,7 @@ Descrição das saídas
 | Xid | ID que representa a requisição da autenticação | Alfanumérico [28 posições] |
 | Eci | Código indicador do e-commerce, que representa o resultado da autenticação | Numérico [até 2 posições] |
 | Version | Versão do 3DS aplicado | Numérico [1 posição]1 – 3DS 1.02 – 3DS 2.0 |
-| ReferenceID | ID que representa a requisição de autenticação | GUID [36 posições] |
+| ReferenceId | ID que representa a requisição de autenticação | GUID [36 posições] |
 | ReturnCode | Código de retorno da requisição de autenticação | Alfanumérico [até 5 posições] |
 | ReturnMessage | Mensagem de retorno da requisição de autenticação | Alfanumérico [varivável] |
 
@@ -197,7 +197,7 @@ Uma vez que a classe é mapeada em determinado campo, o script é capaz de recup
 | bpmpi_paymentmethod | Tipo do cartão a ser autenticado. No caso do cartão múltiplo, deverá especificar um dos tipos, Credit ou Debit | Credit – Cartão de Crédito<br>Debit – Cartão de Débito | Sim | Sim |
 | bpmpi_cardnumber | Número do Cartão | Numérico [até 19 posições] | Sim | Sim |
 | bpmpi_cardexpirationmonth | Mês do vencimento do cartão | Numérico [2 posições] | Sim | Sim |
-| bpmpi_cardexpirationyear | Ano do vencimento do cartão | Numérico [2 posições] | Sim | Sim |
+| bpmpi_cardexpirationyear | Ano do vencimento do cartão | Numérico [4 posições] | Sim | Sim |
 | bpmpi_cardalias | Alias do cartão | Alphanumérico [até 128 posições] | Não | Sim |
 | bpmpi_default_card | Indica se é um cartão padrão do cliente na loja | Booleano<br>true - sim<br>false - não | Não | Sim |
 
@@ -219,7 +219,7 @@ Uma vez que a classe é mapeada em determinado campo, o script é capaz de recup
 
 | **Dados de endereço de cobrança** | **Descrição** | **Tipo/Tamanho** | **Obrigatório para autenticação com desafio** | **Obrigatório para autenticação silenciosa (sem desafio)** |
 | --- | --- | --- | --- | --- |
-| bpmpi_billTo_Name| Nome do contato do endereço de cobrança | Alfanumérico [até 120] | Não | Sim |
+| bpmpi_shipTo_contactName| Nome do contato do endereço de cobrança | Alfanumérico [até 120] | Não | Sim |
 | bpmpi_billTo_phoneNumber | Telefone de contato do endereço de cobrança | Alfanumérico [até 15 posições], no formato: 5511999999999 | Não | Sim |
 | bpmpi_billTo_email | E-mail do contato do endereço de cobrança | Alfanumérico [até 255], no formato [nome@exemplo.com](mailto:nome@exemplo.com) | Não | Sim |
 | bpmpi_billTo_street1 | Logradouro e Número do endereço de cobrança | Alfanumérico [até 60] | Não | Sim |
@@ -231,14 +231,14 @@ Uma vez que a classe é mapeada em determinado campo, o script é capaz de recup
 | **Dados de endereço de entrega** | **Descrição** | **Tipo/Tamanho** | **Obrigatório para autenticação com desafio** | **Obrigatório para autenticação silenciosa (sem desafio)** |
 | --- | --- | --- | --- | --- |
 | bpmpi_shipto_sameasbillto | Indica se utiliza o mesmo endereço fornecido para endereço de cobrança | Booleano<br>true<br>false | Não | Sim |
-| bpmpi_shipTo_name | Nome do contato do endereço de entrega | Alfanumérico [até 60] | Não | Sim |
-| bpmpi_shipTo_phoneNumber | Telefone de contato do endereço de entrega | Alfanumérico [até 15 posições], no formato: 5511999999999 | Não | Sim |
+| bpmpi_shipTo_addressee | Nome do contato do endereço de entrega | Alfanumérico [até 60] | Não | Sim |
+| bpmpi_shipTo_phoneNumber | Telefone de contato do endereço de entrega | Numérico [até 15 posições], no formato: 5511999999999 | Não | Sim |
 | bpmpi_shipTo_email | E-mail do contato do endereço de entrega | Alfanumérico [até 255], no formato [nome@exemplo.com](mailto:nome@exemplo.com) | Não | Sim |
 | bpmpi_shipTo_street1 | Logradouro e Número do endereço de entrega | Alfanumérico [até 60] | Não | Sim |
 | bpmpi_shipTo_street2 | Complemento e bairro do endereço de entrega | Alfanumérico [até 60] | Não | Sim |
 | bpmpi_shipTo_city | Cidade do endereço de entrega | Alfanumérico [até 50] | Não | Sim |
 | bpmpi_shipTo_state | Sigla do estado do endereço de entrega | Texto [2 posições] | Não | Sim |
-| bpmpi_shipto_zipcode | CEP do endereço de entrega | Alfanumérico [até 10 posições], no formato: 99999999 | Não | Sim |
+| bpmpi_shipto_zipcode | CEP do endereço de entrega | Alfanumérico [8 posições], no formato: 99999999 | Não | Sim |
 | bpmpi_shipTo_shippingMethod | Tipo do método de envio | lowcost: envio econômico<br>sameday: envio no mesmo dia<br>oneday: envio no dia seguinte<br>twoday: envio em dois dias<br>threeday: envio em três dias<br>pickup: retirada na loja<br>other: outrosnone: não há envio | Não | Sim |
 | bpmpi_shipto_firstusagedate | Indica a data de quando houve a primeira utilização do endereço de entrega | Texto<br>AAAA-MM-DD – data da criação  | Não | Sim |
 
@@ -258,7 +258,7 @@ Uma vez que a classe é mapeada em determinado campo, o script é capaz de recup
 | bpmpi_useraccount_passwordchangeddate | Indica a data de quando houve a alteração de senha da conta do comprador | Texto<br>AAAA-MM-DD – data da última alteração de senha  | Não | Sim |
 | bpmpi_useraccount_authenticationmethod | Método de autenticação do comprador na loja | 01- Não houve autenticação<br>02- Login da própria loja<br>03- Login com ID federado<br>04- Login com autenticador FIDO | Não | Sim |
 | bpmpi_useraccount_authenticationprotocol | Dado que representa o protocolo de login efetuado na loja | Alfanumérico [até 2048 posições] | Não | Sim |
-| bpmpi_useraccount_authenticationtimestamp | A data e hora que o login foi efetuado na loja | Numérico [12 posições]<br>AAAAMMDDHHMM | Não | Sim |
+| bpmpi_useraccount_authenticationtimestamp | A data e hora que o login foi efetuado na loja | Numérico [19 posições]<br>_YYYY-MM-ddTHH:mm:ss_ | Não | Sim |
 
 | **Dados do dispositivo utilizado para compra** | **Descrição** | **Tipo/Tamanho** | **Obrigatório para autenticação com desafio** | **Obrigatório para autenticação silenciosa (sem desafio)** |
 | --- | --- | --- | --- | --- |
@@ -272,8 +272,8 @@ Uma vez que a classe é mapeada em determinado campo, o script é capaz de recup
 | bpmpi_airline_travelleg_#_departuredate | Data de partida | Texto<br>AAAA-MM-DD | Não | Sim |
 | bpmpi_airline_travelleg_#_origin | Código IATA do aeroporto de origem | Alfanumérico [5 posições] | Não | Sim |
 | bpmpi_airline_travelleg_#_destination | Código IATA do aeroporto de destino | Alfanumérico [5 posições] | Não | Sim |
-| bpmpi_airline_passenger_#_name| Primeiro nome do passageiro | Alfanumérico [até 60 posições] | Não | Sim |
-| bpmpi_airline_passenger_#_ticketprice | O valor da passagem em centavos  Numérico [até 15 posições],<br>exemplo: R$ 125,54 = 125 | Não | Sim |
+| bpmpi_airline_passenger_#_name| Nome do passageiro | Alfanumérico [até 60 posições] | Não | Sim |
+| bpmpi_airline_passenger_#_ticketprice | O valor da passagem em centavos  Numérico [até 15 posições],<br>exemplo: R$ 125,54 = 12554 | Não | Sim |
 | bpmpi_airline_numberofpassengers | Número de passageiros | Numérico [3 posições] | Não | Sim |
 | bpmpi_airline_billto_passportcountry | Código do país que emitiu o passaporte (ISO Standard Country Codes) | Texto [2 posições] | Não | Sim |
 | bpmpi_airline_billto_passportnumber | Número do passaporte | Alfanumérico [40 posições] | Não | Sim |
@@ -368,7 +368,7 @@ curl
        "Xid":"Uk5ZanBHcWw2RjRCbEN5dGtiMTB=",
        "Eci":"5",
        "Version":"2",
-       "RefereceID":"a24a5d87-b1a1-4aef-a37b-2f30b91274e6"
+       "RefereceId":"a24a5d87-b1a1-4aef-a37b-2f30b91274e6"
      }
    }
 }
@@ -380,7 +380,7 @@ curl
 | Xid | XID retornado no processo de autenticação | Alfanumérico [28 posições] | Sim, quando a versão do 3DS for &quot;1&quot; |
 | Eci | E-Commerce Indicator retornado no processo de autenticação | Numérico [até 3 posições] | Sim |
 | Version | Versão do 3DS utilizado no processo de autenticação | Alfanumérico [1 posições] | Sim, quando a versão do 3DS for &quot;2&quot; |
-| ReferenceID | RequestID retornado no processo de autenticação | GUID [36 posições] | Sim, quando a versão do 3DS for &quot;2&quot; |
+| ReferenceId | RequestID retornado no processo de autenticação | GUID [36 posições] | Sim, quando a versão do 3DS for &quot;2&quot; |
 
 ### Response
 
