Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -115,7 +115,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:
 | Flash                | Flash LED                                   | Flash LED                                   | Flash LED        |
 | USB                  | USB 2.0 Micro-B (Micro-USB) Somente Energia | USB 2.0 Micro-B (Micro-USB) Somente Energia | Micro USB 2.0    |
 | Bluetooth            | Versão 4.0 com A2DP                         | Versão 4.0 com A2DP/LE                      | Versão 4.1 suporta LE                     |
-| WiFi                 | 802.11 a/b/g/n                              | 802.11 b/g/n                                | 802.11b/g/n      |
+| WiFi                 | 802.11 a/b/g/n (2.4GHz)                     | 802.11 b/g/n (2.4GHz)                       | 802.11b/g/n (2.4GHz)      |
 | GPS                  | A-GPS. GeoTagging                           | A-GPS                                       | A-GPS            |
 | Sensores             | Acelerômetro, Proximidade e Luminosidade    | Acelerômetro, Proximidade e Luminosidade    | Leitor de digitais, acelerômetro, luminosidade e proximidade                   |
 | Saída de áudio       | Audio Jack 3.5mm                            | Audio Jack 3.5mm                            | Audio Jack 3.5mm |
