--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -485,6 +485,79 @@ Apenas em cartões de crédito MasterCard e Visa.
 
 O Zerto Auth é uma feature disponibilizada penas a alguns lojistas Cielo. Para saber mais sobre o modo de integração, entre em contato com o Suporte Ecommerce Cielo.
 
+# 3DS 2.0
+
+## 1.A autenticação é mandatória?
+
+Atualmente sim, apenas para cartão de débito (3DS 1.0). As bandeiras Visa e Master já estão prontas com a solução 3DS 2.0 e os lojistas que quiserem, já poderão utilizar a nova solução. A princípio, a obrigatoriedade de adequação do lojista para a nova solução 3DS 2.0 passa a valer a partir de Abril de 2019 (cartões de débito, crédito e pré-pago).
+
+## 2.A autenticação é suportada para quais bandeiras?
+
+Por enquanto apenas Visa e Mastercard. A Elo disponibilizará em breve.
+
+## 3.Quais emissores estão preparados para 3DS 2.0?
+
+Nesse momento os emissores estão no modo piloto, ou seja, a ativação está acontecendo de forma controlada. A princípio Caixa e Banco do Brasil estão prontos.
+
+## 4.O 3DS 2.0 está disponível para quais soluções Cielo?
+
+API 3.0, 1.5 e checkout Cielo. Nas soluções 1.5 e 3.0 uma adequação técnica deve ser feita do lado do estabelecimento com base na documentação divulgada. Para o checkout, a adaptação técnica será feita no lado da Cielo.
+
+## 5.Qual a diferença de linguagem/script em cada solução (API 3.0 e 1.5)?
+
+A autenticação 3DS 2.0 é compatível tanto com a API 3.0, quanto com o Webservice 1.5. Porém, é necessário o envio dos dados de autenticação no momento da autorização, conforme descrito no manual técnico.
+
+## 6.A Bandeira conseguirá incluir um score de cada cartão? Essa informação ficará armazenada?
+
+A Bandeira efetua o cálculo de score, mas esse dado não é compartilhado com o estabelecimento. Ele será disponibilizado para o emissor para que essa seja uma informação adicional na decisão de autenticação (silenciosa ou desafio).
+
+## 7.A partir de quando os clientes podem implantar a solução EMV 3DS 2.0?
+
+Visa e Master já estão prontas. Caso o lojista esteja pronto, mas os bancos ainda não, as bandeiras farão análise das informações adicionais enviadas sobre o portador e incluirá um score da transação. Após isso, o banco emissor fará a autenticação. Esse processo continuará até os bancos emissores concluírem a adequação técnica do lado deles. 
+
+## 8.O cliente precisa continuar com antifraude se o liability shift passa para o banco emissor?
+
+Com certeza. Caso não ocorra a autenticação, o antifraude auxiliará o lojista na tomada de decisão, pois terá a liberadade de continuar o fluxo e atingir a autorização da transação.
+
+## 9.É possível diferenciar uma transação que está no 3DS 1.0 com a transação que está no 3DS 2.0? Como?
+
+Sim. No retorno do script há um campo “version” que indicará qual a versão do 3DS. Se for 1, é 3DS 1.0, se for 2 é 3DS 2.0.
+
+## 10.As bandeiras possuem uma data limite para os bancos estarem prontos?
+
+A data limite da Visa (mandate Bandeira) é Agosto de 2019. A partir desse mês, mesmo que os bancos não estejam prontos, a responsabilidade pelo chargeback (liability shift) será do banco, desde que a transação seja submetida com solicitação de autenticação. A Master está com mandate em revisão e logo disponibilizará a data.
+
+## 11.Sou cliente e estou fazendo o desenvolvimento da solução. A Cielo consegue verificar se o meu teste está correto? Como?
+
+É possível o cliente rastrear possíveis erros no script no modo “DEBUG” na integração. Maiores detalhes na documentação.
+
+# Silent Order POST
+
+## 1.A solução implica em algum custo adicional?
+
+Não.
+
+## 2.Quem tem Silent Order POST precisa ter a solução 3.0?
+
+Sim. O Silent apenas substitui a necessidade de passar os dados do cartão abertamente. 
+Desta forma, é necessário “chamar” o e-Commerce 3.0 para autorizar a transação.
+
+## 3.A solução é compatível com Webservice 1.5?
+
+Não.
+
+## 4.Registrar o IP é obrigatório?
+
+Sim, por questão de segurança, este procedimento é obrigatório
+
+## 5.Há um ambiente de testes para homologarmos o Silent Order Post?
+
+Sim, o Sandbox é compatível com Silent Order POST como mostrado na [documentação](https://developercielo.github.io/manual/silent-order-post#integra%C3%A7%C3%A3o).
+
+## 6.Estou recebendo erro 500 na hora de pedir o accesstoken, o que pode ser?
+
+Verificar se o endpoint está correto e tamém verifique se o IP de origem está liberado na plataforma. 
+
 # Integração de Gateways
 
 ## 1.Utilizo um Gateway de pagamentos. Posso usar a API Cielo Ecommerce?
