--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -817,13 +817,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com 
 
 ## Cancelamento
 
-Existem 2 formas de cancelar um pagamento na Cielo LIO:
-
-[Cancelar Pagamento Total](https://developercielo.github.io/manual/cielo-lio#cancelar-pagamento-total)
-
-[Cancelar Parte do Valor do Pagamento](https://developercielo.github.io/manual/cielo-lio#cancelar-parte-do-valor-de-um-pagamento)
-
-Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `cancelOrder()` para receber os estados relacionados ao cancelamento.
+Para tratar a resposta do cancelamento, você deverá utilizar o seguinte callback como parâmetro do método de `cancelOrder()` para receber os estados relacionados ao cancelamento.
 
 > CancellationListener: Um callback que informa sobre todas as ações tomadas durante o processo de cancelamento. 
 As seguintes ações pode ser notificadas: 
@@ -852,7 +846,7 @@ CancellationListener cancellationListener = new CancellationListener() {
 
 ```
 
-### Cancelar Pagamento Total
+### Cancelar Pagamento
 
 No método Cancelar um Pagamento, é necessário ter salvo uma instância da Order que contém as informações da Order. Essa Order pode ser recuperada no sucesso do callback do pagamento ou usando o método de Listagem de Pedidos (Orders) (link para método). 
 Assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:
@@ -869,29 +863,6 @@ Abaixo é detalhado cada um dos parâmetros enviados no método:
 | orderID         | O identificador do pedido a ser pago. | `Long` |
 | payment         | O pagamento a ser cancelado. | `cielo.sdk.order.payment.Payment` |
 | cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | `cielo.sdk.order.payment.CancellationListener` |
-
-### Cancelar parte do valor de um pagamento
-
-No método Cancelar parte do valor de um Pagamento, é necessário ter salvo uma instância da Order que contém as informações da Order. Essa Order pode ser recuperada no sucesso do callback do pagamento ou usando o método de Listagem de Pedidos (Orders). 
-Os parâmetros do método anterior, com a inclusão de um parâmetro que é o valor a ser cancelado. 
-
->Nesse cenário é preciso ter atenção para não passar um valor maior do que o do pagamento, caso contrário o sistema retornará um erro.
-
-Portanto, assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:
-
-```java
-orderManager.cancelOrder(context, orderId, payment, value, cancellationListener);
-```
-
-Abaixo é detalhado cada um dos parâmetros enviados no método:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------------|-----------------------------------------|
-| context         | Contexto da sua aplicação. | `String` |
-| orderID         | O identificador do pedido a ser pago. | `Long` |
-| payment         | O pagamento a ser cancelado. | `cielo.sdk.order.payment.Payment` |
-| value           | O valor a ser cancelado. | `Long` |
-| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. |  `cielo.sdk.order.payment.CancellationListener` |
 
 ### Receber aviso de cancelamento feito na LIO
 
