--- a/_i18n/pt/_posts/qrcode/2019-01-28-qrcode.md
+++ b/_i18n/pt/_posts/qrcode/2019-01-28-qrcode.md
@@ -10,6 +10,12 @@ tags:
   - Pagamento QR Code
 ---
 
+# Requerimentos para acesso
+
+Para acesso a APIs é necessário abrir um chamado via [Zendesk](https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000330511)
+
+** Nota: Futuramente a geração de credenciais será feita via portal do desenvolvedor.**
+
 # Macro fluxo de integração
 
 Atualmente dentro da API de pagamentos existem três recursos utilizados para a integração, sendo eles:
@@ -268,6 +274,10 @@ Caso não esteja com o POS de homologação em mãos, a maneira mais rápida par
 
 ** Observação: Ao testar com o QR Code especificado um erro do tipo 422 é esperado, pois, não existe dados transacionais referentes no autorizador da Cielo.**
 
+# Como obter o POS de homologação.
+
+Para a obtenção do POS de homologação deve-se abrir chamado via [Zendesk](https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000324432)
+
 # Ambientes
 
 * **Homologação** : **apihom.cielo.com**. Deve ser utilizado como o ambiente de desenvolvimento/testes de parceiro.
@@ -289,3 +299,11 @@ R: Não.
 
 * **O que seria o campo deviceID?**
 R: Identificador único de cada dispositivo. Segue IOS: https://developer.apple.com/documentation/uikit/uidevice/1620059-identifierforvendor, Android: https://developer.android.com/training/articles/user-data-ids.
+
+# Canal de Suporte a Dúvidas
+
+Caso ainda tenha dúvidas deve-se abrir um chamado via [Zendesk](https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316152)
+
+# Para Erros ou Problemas
+
+Utilize o canal [Zendesk](https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316172)
