--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -642,16 +642,6 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 | request         | O objeto contendo as informações da ordem a ser paga. | `cielo.orders.domain.CheckoutRequest` |
 | paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
 
-**Fluxo da transação utilizando o pagamento parcial da Cielo LIO**
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcial:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
-
-**Fluxo da transação utilizando o pagamento de valor da Cielo LIO**
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
-
 >**Atenção:** Na versão 0.19.0 do SDK foram introduzidos códigos de pagamento para as principais operações disponibilizadas na LIO, facilitando assim as chamadas de pagamento. É importante ressaltar que as formas de pagamento são configuradas de acordo com o estabelecimento comercial, e nem todas estarão disponíveis em todas os terminais. Caso o método de pagamento selecionado não esteja disponível na LIO em questão, ocorrerá uma exceção do tipo `NoSuchElementException`.
 
 | PaymentCode                 |
@@ -668,16 +658,26 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de v
 | CARTAO_LOJA_PARCELADO_LOJA  |
 | CARTAO_LOJA_PARCELADO       |
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento direto:
+**Fluxo da transação utilizando o pagamento parcial da Cielo LIO**
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando apenas o OrderId:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
+
+**Fluxo da transação utilizando o pagamento de valor da Cielo LIO**
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId e o Valor:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor e o código de pagamento:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-direto.jpg)
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor, o código de pagamento e o número de parcelas:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor, o código de pagamento, o número de parcelas e o email:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com EC:
+Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor, o código de pagamento, o número de parcelas, o EC e o email
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
 ## Cancelamento
