Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -713,16 +713,34 @@ No método Cancelar um Pagamento, é necessário ter salvo uma instância da Ord
 Assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:
 
 ```java
-orderManager.cancelOrder(context, orderId, payment, cancellationListener);
+CancellationRequest request = new CancellationRequest.Builder()
+                .orderId(order.getId()) /* Obrigatório */
+                .authCode(order.getPayments().get(0).getAuthCode()) /* Obrigatório */
+                .cieloCode(order.getPayments().get(0).getCieloCode()) /* Obrigatório */
+                .value(order.getPayments().get(0).getAmount()) /* Obrigatório */
+                .ec("0000000000000003") /* Opcional */
+                .build();
+```
+Abaixo é detalhado cada um dos parâmetros enviados no método:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|-----------------------------------------------------------------------|-----------------------------------------|
+| orderID         | O identificador do pedido a ser pago. | `String` |
+| authCode         | Código de autorização do pagamento. | `String` |
+| cieloCode         | NSU do pagamento | `String` |
+| value         | Valor do pagamento a ser  cancelado | `Long` |
+| ec                          | Em casos de multi-ec, informar aqui o número correspondente       | `String`   |
+| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | `cielo.sdk.order.payment.CancellationListener` |
+
+```java
+orderManager.cancelOrder(request, cancellationListener);
 ```
 
 Abaixo é detalhado cada um dos parâmetros enviados no método:
 
 | Atributo        | Descrição  | Domínio|
 |-----------------|-----------------------------------------------------------------------|-----------------------------------------|
-| context         | Contexto da sua aplicação. | `String` |
-| orderID         | O identificador do pedido a ser pago. | `Long` |
-| payment         | O pagamento a ser cancelado. | `cielo.sdk.order.payment.Payment` |
+| request         | O objeto contendo as informações da ordem a ser cancelada. | `cielo.orders.domain.CancellationRequest` |
 | cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | `cielo.sdk.order.payment.CancellationListener` |
 
 ### Receber aviso de cancelamento feito na LIO
