Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1434,6 +1434,12 @@ Exemplo de resposta:
 }
 ```
 
+Na consulta de pedidos, é possível informar o parâmetro REFERENCE, para identificar as ordens criadas conforme mostrado no exemplo abaixo:
+
+```
+https://api.cielo.com.br/order-management/v1/orders/?reference=EXEMPLO_DE_REFERENCE
+```
+
 #### PUT- Alterar status de um pedido
 
 Esse recurso realiza a alteração do status de um pedido criado. O id do pedido é utilizado para realizar a chamada.
@@ -1912,8 +1918,12 @@ Exemplo de informação enviada pelo Order Manager
          "order_id":0101010101,
          "created_at":"2018-11-29T15:54:25Z",
          "updated_at":"2018-11-29T15:54:25Z",
+         "card": {
+         "brand": "VISA",
+         "mask": "424242-4242"
+         },
          "payment_fields":{
-            "pan":"************1111",
+            "pan":"************4242",
             "v40Code":1,
             "typeName":"VENDA A DEBITO",
             "cityState":"SAO PEDRO DA ALDEIA RJ",
